tests/MathML/basic/bad/noChildPresentation.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtable><mtr><mtd><mtext>mrow</mtext></mtd><mtd><mrow></mrow></mtd></mtr><mtr><mtd><mtext>frac</mtext></mtd><mtd><mfrac></mfrac></mtd></mtr><mtr><mtd><mtext>sqrt</mtext></mtd><mtd><msqrt></msqrt></mtd></mtr><mtr><mtd><mtext>root</mtext></mtd><mtd><mroot></mroot></mtd></mtr><mtr><mtd><mtext>style</mtext></mtd><mtd><mstyle></mstyle></mtd></mtr><mtr><mtd><mtext>error</mtext></mtd><mtd><merror></merror></mtd></mtr><mtr><mtd><mtext>padded</mtext></mtd><mtd><mpadded></mpadded></mtd></mtr><mtr><mtd><mtext>phantom</mtext></mtd><mtd><mphantom></mphantom></mtd></mtr><mtr><mtd><mtext>fenced</mtext></mtd><mtd><mfenced></mfenced></mtd></mtr><mtr><mtd><mtext>enclose</mtext></mtd><mtd><menclose></menclose></mtd></mtr><mtr><mtd><mtext>sub</mtext></mtd><mtd><msub></msub></mtd></mtr><mtr><mtd><mtext>sup</mtext></mtd><mtd><msup></msup></mtd></mtr><mtr><mtd><mtext>subsup</mtext></mtd><mtd><msubsup></msubsup></mtd></mtr><mtr><mtd><mtext>under</mtext></mtd><mtd><munder></munder></mtd></mtr><mtr><mtd><mtext>over</mtext></mtd><mtd><mover></mover></mtd></mtr><mtr><mtd><mtext>underover</mtext></mtd><mtd><munderover></munderover></mtd></mtr><mtr><mtd><mtext>multiscripts</mtext></mtd><mtd><mmultiscripts></mmultiscripts></mtd></mtr><mtr><mtd><mtext>table</mtext></mtd><mtd><mtable></mtable></mtd></mtr><mtr><mtd><mtext>table row</mtext></mtd><mtd><mtable><mtr></mtr></mtable></mtd></mtr><mtr><mtd><mtext>table cell</mtext></mtd><mtd><mtable><mtr><mtd></mtd></mtr></mtable></mtd></mtr></mtable></math>